# yrrenamer

./: .gitignore  CMakeLists.txt  main.cpp  minisyr.h
.github/workflows/: build.yml
